# chisel-nix

templates/chisel/elaborator/src/: Elaborator.scala  GCD.scala  GCDTestBench.scala
templates/chisel/gcd/src/: GCD.scala
templates/chisel/gcdemu/: Cargo.toml
templates/chisel/gcdemu/src/: dpi.rs  drive.rs  lib.rs  svdpi.rs
templates/chisel/nix/gcd/: default.nix  dpi-lib.nix  vcs.nix  verilated.nix
