[package]
name = "gcdemu"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
rand = "0.8"
num-traits = "0.2.19"
num-bigint = { version = "0.4.6", features = ["rand"] }
tracing = "0.1.40"

[features]
sv2023 = []
trace = []

[lib]
crate-type = ["staticlib"]
